dynamix/force-app/main/default/objects/lightningbuddy__Action_User_Preference__c/fields/lightningbuddy__Dismissed_Date__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Dismissed_Date__c</fullName>
    <label>Dismissed Date</label>
    <type>Date</type>
</CustomField>