dynamix/force-app/main/default/objects/lightningbuddy__Action_User_Preference__c/fields/lightningbuddy__User__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_User_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>